# HelloFlask

./: README.md  pyproject.toml
helloflask/: helloflaskscript.py
helloflask/templates/: about.html  form.html  index.html  result.html
petit-projet-cow-counts/: pyproject.toml
