[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = ""
authors = ["alexandra lamotte <alexandra.lamotte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
