[tool.poetry]
name = "petit-projet-cow-counts"
version = "0.1.0"
description = ""
authors = ["alexandra lamotte <alexandra.lamotte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
